--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,30 +1,78 @@
 ---
-title: "Landing Page"
+title: 'Course information'
+metaTitle: 'Course information for NUR1127'
+metaDescription: 'Course information for NUR1127'
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+# Contact details
 
-# Heading H1
-Heading 1 text
+<div style="overflow-x:auto;">
+  <table>
+    <tr>
+      <td>Course Location</td>
+      <td>On-line</td>
+    </tr>
+    <tr>
+      <td>Faculty</td>
+      <td>
+        <b>Aaron Conway RN, PhD</b>
+        <br />
+        155 College Street
+        <br />
+        Rm. 274
+        <br />
+        (416) 946-7112 <br /> Email: aaron.conway@utoronto.ca
+      </td>
+    </tr>
+    <tr>
+      <td>Office Hours</td>
+      <td>By appointment</td>
+    </tr>
+    <tr>
+      <td>Teaching assistant</td>
+      <td>
+        Danielle Just, PhD nursing student
+        <br />
+        Email: danielle.just@mail.utoronto.ca
+      </td>
+    </tr>
+    <tr>
+      <td>Course Website</td>
+      <td>
+        <a href="https://q.utoronto.ca/courses/201160/" target="_blank">
+          NUR1027 Quercus site
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>Quercus resources</td>
+      <td>
+        <a href="https://q.utoronto.ca/courses/46670" target="_blank">
+          {' '}
+          Quercus student guide
+        </a>
+      </td>
+    </tr>
+  </table>
+</div>
 
-## Heading H2
-Heading 2 text
+# Course description
 
-### Heading H3
-Heading 3 text
+NUR1127 builds on and extends the content introduced in NUR1027 and focuses on specific research designs and approaches that explain phenomena and relationships, or involve interventions/actions. You will develop competence in critically appraising, interpreting and synthesizing results from individual research studies and research syntheses. Critical appraisal and interpretation of qualitative and quantitative approaches and mixed methods studies will be addressed.
 
-#### Heading H4
-Heading 4 text
+# Course objectives
 
-##### Heading H5
-Heading 5 text
+_The overall objectives of the course are to enable students to:_
 
-###### Heading H6
-Heading 6 text
+1. Apply knowledge of approaches and rigour in research to address a variety of nursing and health care questions.
+1. Understand and appreciate ethical issues associated with health care research.
 
-## Lists
-- Item 1
-- Item 2
-- Item 3
-- Item 4
-- Item 5
+_Specifically, students will develop the ability to:_
+
+1. Interpret and critically appraise individual studies with different approaches and with a variety of research designs.
+1. Interpret and critically appraise research syntheses (systematic reviews, meta-syntheses, clinical practice guidelines).
+1. Synthesize research evidence to inform nursing and healthcare leadership practice.
+
+# Course structure
+
+Over 12 weeks, you will learn key information about how to find, appraise, and use research in your practice. Each week's learning activities will include: learning objectives, resources and content as well as online class discussion to help you understand and apply the concepts. Each week will begin on a Tuesday and end on the following Monday at 11:59pm.
