--- a/content/evaluation/2-exam.mdx
+++ b/content/evaluation/2-exam.mdx
@@ -1,13 +1,11 @@
 ---
-title: "Exam"
-metaTitle: "This is the title tag of this page"
-metaDescription: "This is the meta description"
+title: 'Exam'
+metaTitle: 'This is the title tag of this page'
+metaDescription: 'This is the meta description'
 ---
 
 ### Description
 
 This on-line examination will cover material presented in Weeks 1-7. It will include primarily multiple choice and some short-answer questions. On-line proctoring (Proctor U) will be used to support academic integrity.
-
-**11th March at 10am - Week 9**
 
 **25% of final grade**
