--- a/content/evaluation/3-ethics.mdx
+++ b/content/evaluation/3-ethics.mdx
@@ -1,13 +1,11 @@
 ---
-title: "Ethics tutorial"
-metaTitle: "Evaluation methods"
-metaDescription: "Evaluation methods"
+title: 'Ethics tutorial'
+metaTitle: 'Evaluation methods'
+metaDescription: 'Evaluation methods'
 ---
 
 ## Description
 
 Complete the interactive on-line ethics tutorial from the Government of Canada <a href="http://tcps2core.ca/welcome">website</a>.
-
-**Due Monday March 30 by 4pm pm EDT**
 
 **5% of final grade**
