--- a/content/evaluation/4-grade.mdx
+++ b/content/evaluation/4-grade.mdx
@@ -1,14 +1,12 @@
 ---
-title: "Written assignment"
-metaTitle: "This is the title tag of this page"
-metaDescription: "This is the meta description"
+title: 'Written assignment'
+metaTitle: 'This is the title tag of this page'
+metaDescription: 'This is the meta description'
 ---
 
 ### Description
 
 Students will compile, review, critically appraise, and synthesize research evidence about a topic or question, and prepare a summary of findings using the GRADE approach. The topic/question should address a practice situation that calls for a specific strategy or direction (in other words - an intervention). The literature review must include 3 published research studies. You are welcome to use the PICO question and search results from the assignment in NUR1027 if you wish. You will provide a summary of the studies (key features of each study, substantive results) and a summary of your critical appraisal, using the GRADE approach in the body of the paper. As such, you need to address the key elements of <a href="https://www.gradeworkinggroup.org/">GRADE</a>, being risk of bias, imprecision, indirectness, inconsistency and the completeness of reporting of research. The assignment will conclude with overall conclusions regarding the state of the evidence, and a GRADE recommendation to address the practice issue or situation.
-
-**Due Friday April 3 by 4pm pm EDT**
 
 **35% of final grade**
 
