--- a/content/evaluation/5-participation.mdx
+++ b/content/evaluation/5-participation.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Class Online Participation"
-metaTitle: "This is the title tag of this page"
-metaDescription: "This is the meta description"
+title: 'Discussion board participation'
+metaTitle: 'This is the title tag of this page'
+metaDescription: 'This is the meta description'
 ---
 
 ### Description
