--- a/content/evaluation/4-grade.mdx
+++ b/content/evaluation/4-grade.mdx
@@ -12,4 +12,4 @@ Students will compile, review, critically appraise, and synthesize research evid
 
 ### Structure
 
-Maximum 8 pages, plus table and references.
+Maximum 2000 words, plus table and references.
