--- a/content/evaluation.mdx
+++ b/content/evaluation.mdx
@@ -7,14 +7,14 @@ metaDescription: 'Evaluation methods'
 import Link from '../src/components/link';
 
 
-There will be three (5) assessments for NUR1127, including a:
+There will be five (5) assessments for NUR1127, including a:
 
 
 - <Link to="/evaluation/1-presentation">Group presentation (25%)</Link>
 - <Link to="/evaluation/2-exam">Exam (25%)</Link>
 - <Link to="/evaluation/3-ethics">Ethics tutorial (5%)</Link>
 - <Link to="/evaluation/4-grade">Written assignment (35%)</Link>
-- <Link to="/evaluation/5-participation">Discussion board participation(10%)</Link>
+- <Link to="/evaluation/5-participation">Discussion board participation (10%)</Link>
 
 
 
