reading week removed

--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -122,7 +122,7 @@ metaDescription: "Course schedule for NUR1127"
     <tr>
       <td>Mar 16</td>
       <td>Week 10</td>
-      <td>No class - reading week</td>
+      <td>No class</td>
       <td></td>
     </tr>
     <tr>
