removed critical appraisal wording

--- a/content/evaluation/1-presentation.mdx
+++ b/content/evaluation/1-presentation.mdx
@@ -4,11 +4,11 @@ metaTitle: "Assessment 1 for NUR1127"
 metaDescription: "Assessment 1 for NUR1127"
 ---
 
-# Risk of Bias Assessment and Interpretation of a Research Study
+# Judging the certainty of evidence from a research study
 
 ### Description
 
-Students will work in small groups (4 people) to present a review and critical appraisal of a research study (using an example article from the syllabus for that week). Students will provide a slide presentation with voiceover (10 minutes maximum, 8-10 slides), to be posted on Voicethread and will facilitate an online discussion. The list of topics and dates for group presentations will be posted the first week of class.
+Students will work in small groups (4 people) to judge the certainty of evidence from a research study (using an example article from the syllabus for that week). Students will provide a slide presentation with voiceover (10 minutes maximum, 8-10 slides), to be posted on Voicethread and will facilitate an online discussion. The list of topics and dates for group presentations will be posted the first week of class.
 
 Presentations must be posted by noon EST on the Monday of your scheduled week:
 
@@ -20,4 +20,4 @@ Presentations must be posted by noon EST on the Monday of your scheduled week:
 
 ### Structure
 
-The presentation should include a brief summary of the study approach (purpose, design, setting and sample, methods), presentation and interpretation of results, and discussion of key strengths and limitations.
+The presentation should include a brief summary of the study approach (purpose, design, setting and sample, methods), presentation and interpretation of results, and of the certainty of evidence using the GRADE framework.
