removed critical appraisal wording

--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -42,8 +42,8 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Critical Appraisal and Interpretation of a Randomized Controlled
-            Trial (group assigned)
+            Judging certainty evidence from a randomized controlled
+            trial (group assigned)
           </a>
         </strong>
       </td>
@@ -58,7 +58,7 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Critical Appraisal and Interpretation of a Systematic Review (group
+            Judging certainty evidence from a systematic review and meta-analysis (group
             assigned)
           </a>
         </strong>
@@ -74,7 +74,7 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Critical Appraisal and Interpretation of a Non-randomized study of
+            Judging certainty evidence from a non-randomized study of
             an intervention (group assigned)
           </a>
         </strong>
