--- a/content/index.mdx
+++ b/content/index.mdx
@@ -31,9 +31,13 @@ metaDescription: 'Course information for NUR1127'
     <tr>
       <td>Teaching assistant</td>
       <td>
-        Danielle Just, PhD nursing student
+        Danielle Just, PhD student
         <br />
         Email: danielle.just@mail.utoronto.ca
+        <br /><br />
+        Rozina Somani, PhD student
+        <br />
+        rozina.somani@mail.utoronto.ca
       </td>
     </tr>
     <tr>
