--- a/content/policies.mdx
+++ b/content/policies.mdx
@@ -3,3 +3,121 @@ title: "Important University and Faculty policies"
 metaTitle: "Important University and Faculty policies"
 metaDescription: "Important University and Faculty policies"
 ---
+
+## Course drop date
+
+March 1st, 2021 is the final date to drop Winter 2021 session courses without academic penalties. Click [here](https://bloomberg.nursing.utoronto.ca/current-students/sessional-dates-and-calendar#content2) for drop dates for 2020-21 courses.
+
+
+## Grading of Written Assignments
+
+All written assignments are subject to the grading regulations as outlined in the Lawrence S. Bloomberg Faculty of Nursing calendar and the School of Graduate Studies Calendar.
+
+Late assignments after the due date will accrue a late penalty of 5% each day (including weekends).
+
+## Submission of Assignments
+
+
+For Online Courses: 
+
+On the due date, please submit an electronic copy of your paper/assignment to the digital drop box in Turnitin using Quercus.  Your paper/assignment will NOT be evaluated until it is submitted to Turnitin using Quercus. 
+
+
+
+## Writing an exam out of sequence or receiving an extension on an assignment
+
+In an exceptional circumstance, e.g. death in family or medical illness, a student may be allowed to write an exam out of sequence or receive an extension on an assignment.
+
+In response to the COVID-19 pandemic, U of T is temporarily suspending the need for a doctor’s note or medical certificate for any absence from academic participation in the University. All students have been instructed to self-report flu-like or cold symptoms **as well as any other health related absence** via ACORN in lieu of a note from a licensed health care provider. **Students still need to contact the instructor as soon as possible prior to the exam/assignment deadline to discuss the concern with the exam date or assignment deadline.** Please allow for leeway in these extraordinary times and reach out if you have additional questions. If a makeup sitting for an exam or an assignment deadline extension is granted, an alternate date needs to be set as close to the date of the original exam/assignment due date as possible. In case of an exam, you will be asked to complete the Declaration of Confidentiality for Students Sitting Tests/Examinations at Other Than the Regular Specified Time.
+
+## Questions About Assignment
+
+In the interest of fairness and transparency, please direct your questions about the paper to the proper discussion board on Quercus. If you do send an email to the instructor or teaching assistant, you may be encouraged to share this answer on the discussion board if the information is helpful to other learners in the course. Students are not permitted to submit a detailed, formal outline of the assignment for evaluation or instructor/TA feedback before the due date. As always, the instructor and/or TA would be happy to answer your questions via Quercus, email, telephone, or in person.
+
+## Plagiarism & Academic Integrity
+
+Turnitin is used in this course. Normally, students will be required to submit their course assignments to Turnitin.com for a review of textual similarity and detection of possible plagiarism. In doing so, students will allow their assignments to be included as source documents in the Turnitin.com reference database, where they will be used solely for the purpose of detecting plagiarism. The terms that apply to the University's use of the Turnitin.com service are described on the Turnitin.com web site. Students do have the option of handing in all their rough drafts and notes of their paper if they are opposed using to Turnitin. These students must approach their faculty teacher(s) in advance.
+
+Academic integrity is essential to the pursuit of learning and scholarship in a university, and to ensuring that a degree from the University of Toronto is a strong reflection of each student’s individual academic achievement.
+
+The University of Toronto Governing Council Code of Behaviour on Academic Matters
+(University of Toronto Governing Council, 2019) is found <a target="_blank" href="http://www.governingcouncil.lamp4.utoronto.ca/wp-content/uploads/2016/07/p0701coboam-2015-2016pol.pdf">here</a>. The code outlines offences that constitute academic misconduct and processes for addressing academic offences. Section B.1 of the code (copied below) outlines academic offences.
+
+It shall be an offence for a student knowingly:
+
+(a) to forge or in any other way alter or falsify any document or evidence required by the University, or to utter, circulate or make use of any such forged, altered or falsified document, whether the record be in print or electronic form;
+(b) to use or possess an unauthorized aid or aids or obtain unauthorized assistance in any academic examination or term test or in connection with any other form of academic work;
+(c) to personate another person, or to have another person personate, at any academic examination or term test or in connection with any other form of academic work;
+(d) to represent as one’s own any idea or expression of an idea or work of another in any academic examination or term test or in connection with any other form of academic work, i.e. to commit plagiarism (for a more detailed account of plagiarism, see Appendix "A") ;
+(e) to submit, without the knowledge and approval of the instructor to whom it is submitted, any academic work for which credit has previously been obtained or is being sought in another course or program of study in the University or elsewhere;
+(f) to submit any academic work containing a purported statement of fact or reference to a source which has been concocted. (Code of Behaviour on Academic Matters, 2019)
+
+All suspected incidents of academic misconduct will be investigated following procedures outlined in the Code of Behaviour on Academic Matters (University of Toronto Governing Council, 2019).
+
+## ProctorU
+
+The University of Toronto Master of Nursing NP Field, Health System Leadership and Administration Field, and Post-Master of Nursing Nurse Practitioner Diploma programs offer students the opportunity to take exams at home with online proctoring. In such cases, the Faculty uses online proctoring services to ensure exam integrity. The Faculty of Nursing contracts with an organization called ProctorU to complete online proctoring for students taking examinations online. Students who take their examinations online must agree to be proctored by ProctorU throughout the duration of the exam. ProctorU provides live proctoring by highly-trained human proctors.
+
+Students must first confirm their identity with photo ID with the human proctor. The proctor then closely monitors students throughout the entire exam using webcams and remote desktop monitoring through high-speed Internet connections. All components of proctoring must be maintained for the duration of the exam. During the exam, the proctor may reach out to the student if they lose the ability to proctor the exam (camera view obstructed/loss of remote desktop view). If the proctor contacts the student during the exam through a pop-up message, voice, or a loud beep, the student is expected to respond to the proctor. **Failure to respond to the proctor to allow proctoring threatens the integrity of the exam.** This will be investigated to determine whether an academic offence has been committed as per the University of Toronto Governing Council Code of Behaviour on Academic Matters. Students who do not agree to be proctored by ProctorU must take their examination on campus at the University of Toronto or at an approved Exam Testing Centre (at the expense of the student) at the same time as the exam is offered online. In such cases, students must notify the Faculty at least two weeks in advance so that appropriate arrangements can be made.
+
+At the completion of the exam, a report of student exam-taking behaviours is generated and reviewed by Faculty and IT staff. Exam grades will NOT be released to students until the integrity of the exam has been verified through ProctorU, the Faculty of Nursing IT staff, and relevant teaching Faculty.
+
+## Accessibility Statement
+
+Students with diverse learning styles and needs are welcomed in this course. In particular, if you have a disability/health consideration that may require accommodations, please contact the Accessibility Services Office as soon as possible. The St. George Campus Accessibility Services staff (located in Robarts Library, First Floor) are available by appointment to assess specific needs, provide referrals and arrange appropriate accommodations (416)978-8060 or accessibility.services@utoronto.ca.
+
+## Health and Wellness Centre
+
+The <a target="_blank" href="http://healthandwellness.utoronto.ca/">Health & Wellness Centre</a> provides a variety of services for registered students including mental health services such as short-term individual counseling and group therapies for anxiety, low or depressed mood and resilience (e.g. Mindfulness-Based, Cognitive-Behavioural Therapy for Anxiety) and psychiatric medication services. Students also have access to counselling services on-site at the Faculty of Nursing through an Embedded Wellness Counsellor, Leah Direnfeld. Students can call 416-978-8030 to book an appointment.
+
+## Student Evaluation of Courses
+
+Student evaluation of courses is an essential component of our educational programs at the Lawrence S. Bloomberg Faculty of Nursing. Student feedback enables us to continue to improve our teaching effectiveness to enhance student learning.
+
+The Lawrence S. Bloomberg Faculty of Nursing participates in the University of Toronto’s centralized ‘Student Evaluation of Courses’ system. Towards the end of this course, you will receive an email inviting you to complete an online evaluation of this course. The email will provide you with the specific information and links needed to access and complete course evaluation. Your ratings and comments will be anonymous but will be aggregated for summary across evaluations. Once a process has been established, summarized course evaluations will be made available within the faculty and university community. For more information about the University of Toronto policy about student evaluation of courses, please refer to the
+
+<a
+  target="_blank"
+  href="http://www.governingcouncil.utoronto.ca/Assets/Governing+Council+Digital+Assets/Policies/PDF/ProvostiaStudentEval.pdf"
+>
+  website
+</a>
+.
+
+## Technical Requirements for Online Academic Activities
+
+There are technical requirements that will allow you to participate in the course. The course includes online webinars, online examinations, and assignments that are submitted online.
+
+- Minimum Recommended Computer System Requirements
+- Laptop or Desktop 4GB Ram Windows 10 or Mac OSX 10.12
+- Screen Resolution of 1280 x 720 Webcam Headphones Microphone (Built-in, on headphones, or external) DSL or Cable Internet with 1.5 Mbps upload and download
+
+If you have purchased your computer within the last 3-5 years you will likely have no trouble meeting these requirements. If your computer does not meet the minimum requirements you may have difficulty using some of the applications.
+
+You will need the webcam to enable online proctoring for any proctored examinations. For proctored examinations we use the Proctor U service and technical requirements for that service can be found <a target="_blank" href="https://www.proctoru.com/auto-resource-center">here</a>. Most new laptops (within 3-5 years) have webcams built in. If you are using a desktop computer you may need to purchase a webcam. In addition, you will need a microphone (most webcams and laptops have built-in microphones) and a set of headphones such as the kind that come with mobile devices and smartphones.
+
+In addition to the computer system requirements it is also recommended you have sufficiently fast Internet. Ensure you have DSL or Cable Internet with at least 1.5 Mbps download speed and at least 1.5 Mbps upload speed. Dial-up Internet is not recommended.
+You can test your Internet speed by going to <a target="_blank" href="https://www.speedtest.net/">this website</a> and clicking “Go”.
+
+In addition, it is important to note that some computer applications may be required to communicate throughout this course. Ensure you have:
+
+- A PDF Reader (Adobe Reader, Preview, etc.)
+- Word Processing Software (ie. Microsoft Office available free from U of T)
+- Two web browsers (Firefox and Chrome are recommended)
+- An updated Adobe Flashplayer as some systems still use this legacy product
+
+Please note: If you are accessing the Internet through a large organization or using a work computer (e.g. a hospital) you may need to contact your organization’s IT department to arrange these downloads and confirm internet speed.
+
+Please note, the university also provides free <a target="_blank" href="http://antivirus.utoronto.ca/index.php?page=students">antivirus software</a> to all students which is strongly recommended.
+
+## Notice of video recording and sharing (including permissible download; prohibited re-use)
+
+This course, including your participation, will be recorded on video and will be available to students in the course for viewing remotely and after each session.
+
+Course videos and materials belong to your instructor, the University, and/or other source depending on the specific facts of each situation, and are protected by copyright. In this course, you are permitted to download session videos and materials for your own academic use, but you should not copy, share, or use them for any other purpose without the explicit permission of the instructor.
+
+For questions about recording and use of videos in which you appear please contact your instructor.
+
+## Equity, Diversity, and Inclusion
+
+The University of Toronto is committed to equity, human rights and respect for diversity. All members of the learning environment in this course should strive to create an atmosphere of mutual respect where all members of our community can express themselves, engage with each other, and respect one another’s differences. U of T does not condone discrimination or harassment against any persons or communities.
