proctorU update added

--- a/content/policies.mdx
+++ b/content/policies.mdx
@@ -54,13 +54,23 @@ It shall be an offence for a student knowingly:
 
 All suspected incidents of academic misconduct will be investigated following procedures outlined in the Code of Behaviour on Academic Matters (University of Toronto Governing Council, 2019).
 
-## ProctorU
+## ProctorU Live+
 
-The University of Toronto Master of Nursing NP Field, Health System Leadership and Administration Field, and Post-Master of Nursing Nurse Practitioner Diploma programs offer students the opportunity to take exams at home with online proctoring. In such cases, the Faculty uses online proctoring services to ensure exam integrity. The Faculty of Nursing contracts with an organization called ProctorU to complete online proctoring for students taking examinations online. Students who take their examinations online must agree to be proctored by ProctorU throughout the duration of the exam. ProctorU provides live proctoring by highly-trained human proctors.
+Online exam(s) within this course [may] use online invigilation provided by ProctorU®, a live online proctoring service that allows completion of the assessment from an off-campus location. A highly trained human proctor will observe your completion of the exam using specialized software. Recordings will be made and held for a limited period of time in order to ensure academic integrity is maintained. The University of Toronto has an institutionally endorsed agreement with ProctorU that protects the privacy of the recordings, and other personal information.
 
-Students must first confirm their identity with photo ID with the human proctor. The proctor then closely monitors students throughout the entire exam using webcams and remote desktop monitoring through high-speed Internet connections. All components of proctoring must be maintained for the duration of the exam. During the exam, the proctor may reach out to the student if they lose the ability to proctor the exam (camera view obstructed/loss of remote desktop view). If the proctor contacts the student during the exam through a pop-up message, voice, or a loud beep, the student is expected to respond to the proctor. **Failure to respond to the proctor to allow proctoring threatens the integrity of the exam.** This will be investigated to determine whether an academic offence has been committed as per the University of Toronto Governing Council Code of Behaviour on Academic Matters. Students who do not agree to be proctored by ProctorU must take their examination on campus at the University of Toronto or at an approved Exam Testing Centre (at the expense of the student) at the same time as the exam is offered online. In such cases, students must notify the Faculty at least two weeks in advance so that appropriate arrangements can be made.
+Requirements: Students taking their examinations online will be proctored by ProctorU® throughout the duration of the exam. Access to a computer that can support remote recording is your responsibility as a student. You will need to ensure that you can complete the exam using a reliable computer with a webcam and microphone available, as well as a high-speed internet connection. Please note that you will be required to show your T-Card prior to beginning to write the exam. 
 
-At the completion of the exam, a report of student exam-taking behaviours is generated and reviewed by Faculty and IT staff. Exam grades will NOT be released to students until the integrity of the exam has been verified through ProctorU, the Faculty of Nursing IT staff, and relevant teaching Faculty.
+Detailed information and an opportunity to test your setup will be provided prior to the exam date. For additional information about online proctoring please see course information in Quercus, or visit UofT Online Proctoring Guidelines at https://teaching.utoronto.ca/ed-tech/online-learning/online-proctoring/ 
+
+General Description for Using ProctorU Live+:  Students must first confirm their identity with photo ID with the human proctor. The proctor then closely monitors students and their immediate environment throughout the entire exam using webcams and remote desktop monitoring through high-speed Internet connections. All components of proctoring must be maintained for the duration of the exam. During the exam, the proctor may reach out to the student if they lose the ability to proctor the exam (camera view obstructed/loss of remote desktop view). If the proctor contacts the student during the exam through a pop-up message, voice, or a loud beep, the student is required to respond to the proctor. Failure to respond to the proctor to allow proctoring threatens the integrity of the exam. Non-compliance with exam protocols flagged by the invigilator will be investigated to determine whether an academic offence has been committed as per the University of Toronto Governing Council Code of Behaviour on Academic Matters. At the completion of the exam, a report of student exam-taking behaviours is generated and reviewed by the course instructor(s) and our IT staff. Exam grades will not be released to students until the integrity of the exam has been verified through ProctorU®, the course instructor(s), and our IT staff. 
+
+Privacy and Information Security: The University of Toronto has a contract with ProctorU® that protects the privacy of the recordings, and other personal information. As you will be video recorded while writing the exam, you may want to consider preparing the background (room / walls) so that personal details you would not want visible are removed or take your exam in a room that you are comfortable showing on camera. It is recommended that students using ProctorU services remove the Chrome or Firefox extension after completion of the exam.
+
+Retention of Video Content: Recordings captured via the ProctorU® system are available to the University and the instructor for one year after a recording is made. After this period of time has passed, recordings are purged.
+
+For more information see ProctorU: Privacy and Security Information Notice for Students please see the following https://teaching.utoronto.ca/ed-tech/online-learning/online-proctoring/proctoru-privacy/ 
+
+
 
 ## Accessibility Statement
 
