--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -42,7 +42,7 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Judging certainty evidence from a randomized controlled
+            Judging the certainty of evidence from a randomized controlled
             trial (group assigned)
           </a>
         </strong>
@@ -58,7 +58,7 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Judging certainty evidence from a systematic review and meta-analysis (group
+            Judging the certainty of evidence from a systematic review and meta-analysis (group
             assigned)
           </a>
         </strong>
@@ -74,7 +74,7 @@ metaDescription: "Course schedule for NUR1127"
             target="_blank"
             href="https://q.utoronto.ca/courses/201160/assignments/465707"
           >
-            Judging certainty evidence from a non-randomized study of
+            Judging the certainty of evidence from a non-randomized study of
             an intervention (group assigned)
           </a>
         </strong>
