moved alt sr to week 3

--- a/content/schedule.mdx
+++ b/content/schedule.mdx
@@ -29,7 +29,9 @@ metaDescription: "Course schedule for NUR1127"
     <tr>
       <td>Jan 19</td>
       <td>Week 3</td>
-      <td>Systematic reviews of randomized controlled trials</td>
+      <td><tr>Systematic reviews of randomized controlled trials</tr>
+      <tr>&</tr>
+      <tr>Alternative types of systematic reviews</tr></td>
       <td></td>
     </tr>
     <tr>
@@ -83,7 +85,7 @@ metaDescription: "Course schedule for NUR1127"
     <tr>
       <td>Feb 16</td>
       <td>Week 7</td>
-      <td>Alternative types of systematic reviews</td>
+      <td>Reading week</td>
       <td></td>
     </tr>
     <tr>
