--- a/content/index.mdx
+++ b/content/index.mdx
@@ -31,13 +31,7 @@ metaDescription: 'Course information for NUR1127'
     <tr>
       <td>Teaching assistant</td>
       <td>
-        Danielle Just, PhD student
-        <br />
-        Email: danielle.just@mail.utoronto.ca
-        <br /><br />
-        Rozina Somani, PhD student
-        <br />
-        rozina.somani@mail.utoronto.ca
+        TBC
       </td>
     </tr>
     <tr>
